
ChangeLog for jsrsasign

* Changes from 8.0.4 to 8.x.x (2017-xxx-xx)
  - tool/tool_asn1dumper.html
    - #304 pemtohex issue fix

* Changes from 8.0.3 to 8.0.4 (2017-Sep-15)
  - asn1cms 1.0.4 to 1.0.5
    - add KJUR.asn1.cms.CMSUtil.verifySignedData method to
      verify CMS signed data.
  - crypto 1.2.0 to 1.2.1
    - small refactoring
  - x509 1.1.17 to 1.1.18
    - fix getInfo() to support no extension.
  - add sample_node/cmssign
  - fix sample/sample-ecdsa.html in sig.init.
  - fix sample_node/asn1extract in ASN1HEX method call
  - merge PR #292 for https
  - merge PR #283 to fix document and example
  - merge PR #281 to fix JWK Thumbprint RFC number

* Changes from 8.0.2 to 8.0.3 (2017-Jul-11)
  - jws 3.3.9 to 3.3.10
    - fix JWS.verify fail for #276

* Changes from 8.0.1 to 8.0.2 (2017-Jul-08)
  - jws 3.3.8 to 3.3.9
    - fix for jsrsasign-jwths-min.js
  - sample/sample-rsasign.html fix for #274.
  - test qunit-do-package-rsa.html fix

* Changes from 8.0.0 to 8.0.1 (2017-Ju1-01)
  - x509 1.1.16 to 1.1.17
    - add getExtSubjectAltName2 which supports
      GeneralName type
    - make getExtSubjectAltName deprecated
    - fix getExtCRLDistributionPointsURI() for #269.
      caused error if CDP containts directory name.
      now fixed.
    - getInfo now supports certificatePolicies
  - tool/tool_certview.html
    - SHA1 fingerprint issue fixed for #273

* Changes from 7.2.2 to 8.0.0 (2017-Jun-30)
  - all of deprecated classes, methods and files are
    removed.
    - get smaller all-min.js than before.
    - following files are refactored:
    - asn1hex, asn1x509, crypto, jwsjs, keyutil,
      rsapem, rsasign, x509.
  - npm/lib/footer.js fix for issue #270.

* Changes from 7.2.1 to 7.2.2 (2017-Jun-23)
  - jws 3.3.7 to 3.3.8
    - merge pull request #266
  - x509 1.1.15 to 1.1.16
    - read X.509v3 certificate without any extension
      supported in readCertHex.
  - ext/yahoo.js
    - remove most of codes and keep YAHOO.lang.extend only.