@@ -4,6 +4,7 @@ ChangeLog for jsrsasign
 * Changes from 8.0.4 to 8.x.x (2017-xxx-xx)
   - tool/tool_asn1dumper.html
     - #304 pemtohex issue fix
+  - tool/tool_roca.html added to check ROCA vulnerablity for public key
 
 * Changes from 8.0.3 to 8.0.4 (2017-Sep-15)
   - asn1cms 1.0.4 to 1.0.5
